2005-04-03  Ulrich Pfeifer  <pfeifer@wait.de>

	* Removed Text::English from Distribution
	* Determine pager and search path at run time (Patch from Marek, Ticket #4506)

2004-05-02  Florian Ragwitz

	* please parameterize the $IDIR in the make process
	* clarified license
	* clarified authorship of Text::English
	
2003-06-19  Slaven Rezic 

	* t/basic.t: made test more safe and portable

2003-06-18  Ulrich Pfeifer  <pfeifer@wait.de>

	Added some regression tests before the CPAN testers beat me up.

2003-06-18  Slaven Rezic 

        [cpan #2820] Fix indexed directories

        In some perl installations, installsitelib is not part of the
	privlib directory. That is, privlib is something like
	/usr/local/lib/perl5/5.8.0 and installsitelib something like
	/usr/local/lib/perl5/site_perl/5.8.0.  This causes the perlindex
	indexer not to dive into installsitelib.


Sun Mar 10 13:05:46 MET 1996   "Chuck D. Phillips (NON-HP Employee)" <cdp@hpescdp.fc.hp.com>

By default, the program perlindex isn't deleted when you do a "make
clean" the result is that the Config.pm constants don't get updated
next time you do a "make all".  To fix this, you can add the following
line to the WriteMakefile() parameters in Makefile.PL:

	      'clean' =>	{ 'FILES' => 'perlindex' },


Nit: Term::ReadKey is more reliable for cbreak than using $d_bsd.  On
HPUX, setting BSD_Style to either 0 or 1 doesn't quite work right.
I've hacked my own copy of perlindex.PL to prefer Term::ReadKey if
available.  Otherwise, it defaults to old behavior execept that it
resolves during "make all" instead of at run time.  (I also insert
"col" between the nroff and the pager to avoid some garbage on HPUX.)
I've included the diffs at the bottom.

patch7 Description:

	Fixed test for compressed int patch.

Fri Mar  8 20:26:27 MET 1996   Ulrich Pfeifer <pfeifer@ls6.informatik.uni-dortmund.de>

patch6 Description:

	man3direxp will not be indexed any more. Even if inside of