@@ -2,15 +2,15 @@
 #                              -*- Mode: Perl -*- 
 # Author          : Ulrich Pfeifer
 # Created On      : Tue May 27 17:27:28 1997
-# Last Modified On: Sun Apr  3 13:25:47 2005
+# Last Modified On: Sun Apr 10 10:36:41 2005
 # Language        : CPerl
-# Update Count    : 26
+# Update Count    : 27
 #
 # (C) Copyright 1997-2005, Ulrich Pfeifer, all rights reserved.  This
 # file is free software; you can redistribute it and/or modify it
 # under the same terms as Perl itself.
 
-$VERSION = "1.4";
+$VERSION = "1.401";
 
 use ExtUtils::MakeMaker;
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
@@ -23,7 +23,9 @@ WriteMakefile(
     'DEFINE'       => '',     # e.g., '-DHAVE_SOMETHING' 
     'INC'          => '',     # e.g., '-I/usr/include/other' 
     'dist'         => { SUFFIX => "gz", COMPRESS => "gzip -f"},
-    'PREREQ_PM'    => { 'Text::English' => 0 },
+# we do bundle that module in the distribution
+#   'PREREQ_PM'    => { 'Text::English' => 0 },
     'EXE_FILES'    => [ 'perlindex' ],
     'clean'        => { 'FILES' => 'perlindex' },
 );
+
